# ARQ_common_packages

./: README.md  pull_request_template.md
arq_description_common/: CMakeLists.txt  package.xml
arq_description_common/models/arq_panda_setup/: model.config  model.sdf
arq_description_common/models/arq_panda_setup/meshes/: arq_panda_setup.stl
arq_description_common/models/arq_ur5_setup/: model.config  model.sdf
arq_description_common/models/arq_ur5_setup/meshes/: arq_ur5_setup.stl
arq_description_common/models/ground/: model.config  model.sdf
arq_description_common/models/kinect_ros/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
arq_description_common/models/maria_metallic_frame/: model.config  model.sdf
arq_description_common/models/rectangular_box/: model.config  model.sdf
arq_description_common/scenes/: arq_panda_setup.scene  arq_ur5_setup.scene
arq_description_common/worlds/: arq_panda_setup.world  arq_ur5_setup.world  empty_world.world
arq_robots/: CMakeLists.txt  package.xml
arq_robots/controllers/: ezgripper_simulation_controller.yaml  panda_arm_position_controller.yaml  panda_gripper_position_controller.yaml  panda_torque_controller.yaml  ur5_controller.yaml  ur5_ezgripper_controller_simulation.yaml  ur5_ezgripper_position_controllers.yaml
arq_robots/urdf/: arq_panda_arm.urdf.xacro  arq_ur5.urdf.xacro  arq_ur5_with_ezgripper.urdf.xacro
