<?xml version="1.0"?>
<package format="2">
  <name>arq_robots</name>
  <version>0.0.1</version>
  <description>Package containing URDF and controller files allowing to operate the different robots of ARQ</description>

  <maintainer email="b.d.denoun@qmul.ac.uk">Brice Denoun</maintainer>
  <license>GPL</license>
  <author email="b.d.denoun@qmul.ac.uk">Brice Denoun</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
